--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.2']
+        ruby-version: ['3.2.2']
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby
