fix:优化自动化部署文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
       uses: nogsantos/scp-deploy@master
       with:
         host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        password: ${{ secrets.DEPLOY_PASSWORD }}
+        user: ${{ secrets.DEPLOY_USER }}
+        # password:
         key: ${{ secrets.DEPLOY_SECRET }}
         src: ./_site/*
         remote: "/var/www"
