--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,12 @@ jobs:
       matrix:
         ruby-version: ['3.2.2']
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    # - uses: actions/checkout@v3
+    # - name: Set up Ruby
+    #   uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+    #   with:
+    #     ruby-version:
+    #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Checkout
       uses: actions/checkout@v3
     - name: Build
