--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         host: ${{ secrets.DEPLOY_HOST }}
         user: ${{ secrets.DEPLOY_USER }}
         pass: ${{ secrets.DEPLOY_PASSWORD }}
-
+        key: ${{ secrets.DEPLOY_SECRET }}
         source: "./*"
         target: "/var/www"
 
