--- a/_config.yml
+++ b/_config.yml
@@ -202,3 +202,6 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+# 添加emoji （https://www.webfx.com/tools/emoji-cheat-sheet/） （https://emojipedia.org/）
+plugins:
+  - jemoji
