--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ comments:
   # The active options are as follows:
   disqus:
     shortname: xue-qiutop.disqus.com # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    comments: true
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
