--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ comments:
   active: 'disqus' # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
-    shortname: xue-qiutop.disqus.com # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname: xueqiu-top # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
     comments: true
   # utterances settings › https://utteranc.es/
   utterances:
