--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,11 @@ jobs:
       uses: appleboy/scp-action@v1
       with:
         host: ${{ secrets.DEPLOY_HOST }}
-        user: ${{ secrets.DEPLOY_USER }}
-        pass: ${{ secrets.DEPLOY_PASSWORD }}
+        username: ${{ secrets.DEPLOY_USER }}
+        password: ${{ secrets.DEPLOY_PASSWORD }}
         key: ${{ secrets.DEPLOY_SECRET }}
-        local: "./_site"
-        remote: "/var/www"
+        source: "./_site"
+        target: "/var/www"
 
     - name: executing remote ssh commands to develop
       uses: appleboy/ssh-action@master
